--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     ],
 
     "require": {
-        "php": "^7.2|8.0.*|8.1.*|8.2.*|8.3.*",
+        "php": ">= 8.1",
         "psr/log": "^1.0|^2.0|^3.0",
-        "solarium/solarium": "^5.0|^6.0",
+        "solarium/solarium": "^6.1",
         "webfactory/content-mapping": "^3.5"
     },
 
